# OD-Prank-BE

./: .gitignore  Dockerfile  conftest.py  db_test.py  docker-compose.dev.yml  docker-compose.yml  main.py  manage.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0f4b623df300_make_subscription_type_nullable.py  1d3bb28d0c1b_add_audio_storage_fields_to_voice_lines.py  1d4d16c1fd3a_add_retry_attempts_to_voice_line_audios.py  2078287d9abd_add_user_profiles.py  21ee4da0f7e1_add_order_index_to_voice_lines.py  3504d33ce848_initial_schema.py  36b4c04da470_merge_heads.py  43230b9564a5_adding_question_and_answers_to_scenario.py  43a6f0871b23_added_target_name_to_scenario.py  505d8f1f8acb_initial_schema.py  5c35799a44b4_hot_fix_calllog.py  5e7be2795034_add_call_log_table.py  672105e844a5_add_scenario_analysis_json_field_to_.py  6a892f7830bb_profile_update.py  75208763de62_change_user_id_to_uuid_for_rls_.py  79a3bd0042e5_setting_target_name_nullable_for_.py  7b34ca5667fa_add_voice_line_audios_table_and_drop_.py  8729ebfa06c4_add_preferred_voice_id_to_scenarios.py  9cffc3c9b0d3_add_next_billing_date_and_cancel_at_to_.py  9cffc3c9b0d3_placeholder_empty_migration.py  9e0b21c2d653_add_conference_support_to_call_sessions.py  9f3a2b1c0dfe_remove_gender_from_voice_line_audios.py  a5354dbfc6be_changed_default_for_is_active_flag.py  a99febc0c1d7_add_call_session_and_call_event_tables.py  add_clarification_fields.py  (+5 more)
app/: main.py
db/: README.md
management/: README.md
scripts/: db_connect_main.py
supabase/: config.toml
tests/: test_database_prepared_statements.py
(+128 files in other folders)
